# podman-rest-client

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: main.yml
openapi-client-gen/: Cargo.toml
openapi-client-gen/src/: error.rs  file_tracker.rs  generate.rs  main.rs  model.rs  operation.rs  parameter.rs  parse.rs  spec.rs  tag.rs  template.rs
openapi-client-gen/src/generate/: mod.rs
openapi-client-gen/src/generate/rust_hyper_legacy/: mod.rs
openapi-client-gen/src/generate/rust_hyper_legacy/templates/: api_specific_mod.rs  apis.rs  client.rs  common_mod.rs  config.rs  lib.rs  mod.rs  models.rs  params.rs  request.rs
openapi-client-gen/src/lang/: rust.rs
openapi-client-gen/templates/: client.rs.j2  config.rs.j2  error.rs  mod.rs.j2  request.rs
openapi-client-gen/templates/api/: api.rs.j2  mod.rs.j2
openapi-client-gen/templates/apis/: api.rs.j2
openapi-client-gen/templates/model/: mod.rs.j2  model.rs.j2
openapi-client-gen/templates/models/: model.rs.j2
openapi-client-gen/templates/params/: mod.rs.j2  params.rs.j2
podman-api/: .openapi-generator-ignore  Cargo.toml  README.md
podman-api/.openapi-generator/: FILES
podman-api/docs/: AccessMode.md  Address.md  AuthConfig.md  AuthReport.md  AutoUserNsOptions.md  BindOptions.md  CapacityRange.md  ClusterVolume.md  ClusterVolumeSpec.md  ComponentVersion.md  Config.md  ConfigReference.md  ConmonInfo.md  Container.md  ContainerBasicConfig.md  ContainerCgroupConfig.md  ContainerCreateResponse.md  ContainerExecRequest.md  ContainerHealthCheckConfig.md  ContainerJson.md  ContainerNetworkConfig.md  ContainerNetworkStats.md  ContainerNode.md  ContainerResourceConfig.md  ContainerSecurityConfig.md  ContainerSize.md  ContainerState.md  ContainerStats.md  ContainerStorageConfig.md  ContainerStore.md  ContainerTopOkBody.md  ContainerWait200Response.md  ContainerWait200ResponseError.md  ContainersApi.md  ContainersCompatApi.md  ContainersPruneReport.md  ContainersPruneReportLibpod.md  CpuUsage.md  CreateContainerConfig.md  CreateOptions.md  (+246 more)
podman-api/src/apis/: client.rs  configuration.rs  containers_api.rs  containers_compat_api.rs  exec_api.rs  exec_compat_api.rs  images_api.rs  images_compat_api.rs  manifests_api.rs  mod.rs  networks_api.rs  networks_compat_api.rs  pods_api.rs  request.rs  secrets_api.rs  secrets_compat_api.rs  system_api.rs  system_compat_api.rs  volumes_api.rs  volumes_compat_api.rs
podman-api/src/models/: access_mode.rs  address.rs  auth_config.rs  auth_report.rs  authenticate_ok_body.rs  auto_user_ns_options.rs  bind_options.rs  capacity_range.rs  cluster_volume.rs  cluster_volume_spec.rs  component_version.rs  config.rs  config_reference.rs  conmon_info.rs  container.rs  container_basic_config.rs  container_cgroup_config.rs  container_create_response.rs  container_exec_request.rs  container_health_check_config.rs  container_json.rs  container_network_config.rs  container_network_stats.rs  container_node.rs  container_resource_config.rs  container_security_config.rs  container_size.rs  container_state.rs  container_stats.rs  container_storage_config.rs  container_store.rs  container_top_ok_body.rs  container_update_ok_body.rs  container_wait_200_response.rs  container_wait_200_response_error.rs  containers_prune_report.rs  containers_prune_report_libpod.rs  cpu_usage.rs  create_container_config.rs  create_options.rs  (+239 more)
podman-autogen-api/: .openapi-generator-ignore  Cargo.toml  README.md
podman-autogen-api/src/: client.rs  config.rs  lib.rs
podman-autogen-api/src/apis/: client.rs  configuration.rs  containers.rs  containers_api.rs  containers_compat.rs  containers_compat_api.rs  exec.rs  exec_api.rs  exec_compat.rs  exec_compat_api.rs  images.rs  images_api.rs  images_compat.rs  images_compat_api.rs  manifests.rs  manifests_api.rs  mod.rs  networks.rs  networks_api.rs  networks_compat.rs  networks_compat_api.rs  pods.rs  pods_api.rs  request.rs  secrets.rs  secrets_api.rs  secrets_compat.rs  secrets_compat_api.rs  system.rs  system_api.rs  system_compat.rs  system_compat_api.rs  volumes.rs  volumes_api.rs  volumes_compat.rs  volumes_compat_api.rs
podman-autogen-api/src/models/: access_mode.rs  auth_report.rs  authenticate_ok_body.rs  bind_options.rs  capacity_range.rs  cluster_volume.rs  cluster_volume_spec.rs  config.rs  config_reference.rs  conmon_info.rs  container_cgroup_config.rs  container_create_response.rs  container_json.rs  container_network_config.rs  container_node.rs  container_resource_config.rs  container_stats.rs  container_top_ok_body.rs  container_update_ok_body.rs  container_wait_response.rs  containers_prune_report.rs  cpu_usage.rs  driver.rs  (+158 more)
src/: attach_frame_stream.rs  cli.rs  config.rs  error.rs  lib.rs  podman_rest_client.rs  ssh.rs  unix_socket.rs
src/api_common/: config.rs  error.rs  mod.rs  request.rs
src/v4/: client.rs  config.rs  mod.rs  request.rs
src/v5/: client.rs  config.rs
swagger/: swagger-v4.9.modified.yaml  swagger-v4.9.yaml  swagger-v5.1.0.modified.yaml  swagger-v5.1.0.yaml
tests/: common.rs  test.rs  v4.rs  v4_common.rs  v5.rs  v5_common.rs
(+568 files in other folders)
