[workspace]
members = [".", "openapi-client-gen"]

[workspace.package]
version = "0.10.2"
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/blazzy/podman-rest-client"

[package]
name = "podman-rest-client"
description = "Interface for querying the podman REST API. Supports connections over SSH."
readme = "README.md"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true


[workspace.dependencies]
hyper = { version = "^1.3.1", features = ["full"] }


[dependencies]
async-trait = "0.1.81"
http = "1.1.0"
hyper.workspace = true
http-body-util = "0.1.2"
hyper-util = { version = "0.1.5", features = ["client-legacy", "http1"] }
nix = { version = "0.29.0", features = ["user"] }
russh = { version = "0.43.0", optional = true }
russh-keys = { version = "0.43.0", optional = true }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
thiserror = "1.0.63"
tokio = { version = "1.38.0", features = ["process"] }
tower-service = "0.3.2"
serde_path_to_error = "0.1.16"
url = "2.5.2"

[dev-dependencies]
assert_matches = "1.5.0"
tokio = { version = "1.38.0", features = ["process", "macros"] }
tokio-test = "0.4.4"

[features]
default = ["v5", "uds", "ssh"]
v5 = []
v4 = []
uds = []
ssh = ["dep:russh", "dep:russh-keys"]
