[package]
name = "openapi-client-gen"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
askama = "0.12.1"
clap = { version = "4.5.10", features = ["cargo", "derive"] }
colog = "1.3.0"
convert_case = "0.6.0"
hashlink = "0.8.4"
log = "0.4.22"
serde_yaml2 = "0.1.2"
thiserror = "1.0.63"
yaml-rust2 = "0.8.1"
