[package]
name = "openapi-client-gen"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
askama = "0.12.1"
clap = { version = "4.5.10", features = ["cargo", "derive"] }
colog = "1.3.0"
convert_case = "0.6.0"
hashlink = "0.8.4"
indoc = "2.0.5"
itertools = "0.13.0"
log = "0.4.22"
prettyplease = "0.2.20"
proc-macro2 = "1.0.86"
quote = "1.0.36"
regex = "1.10.6"
serde_yaml2 = "0.1.2"
syn = "2.0.72"
thiserror = "1.0.63"
yaml-rust2 = "0.8.1"
